packages/svelte/tests/compiler-errors/samples/css/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'css_expected_identifier',
		message: 'Expected a valid CSS identifier',
		position: [25, 25]
	}
});
